--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: black;
-      color: #39ff14;
+      color: white;
       overflow-x: hidden;
     }
     header {
@@ -28,6 +28,7 @@
     header h1 {
       font-size: 3rem;
       margin: 10px 0;
+      color: #39ff14;
     }
     header p {
       font-size: 1.2rem;
@@ -59,6 +60,7 @@
       text-align: center;
       margin-bottom: 40px;
       font-size: 2.2rem;
+      color: #39ff14;
     }
     .projects {
       display: grid;
@@ -78,6 +80,7 @@
     .card h3 {
       margin-bottom: 10px;
       font-size: 1.3rem;
+      color: #39ff14;
     }
     .card p {
       font-size: 0.95rem;
@@ -127,11 +130,6 @@
     <h1>Tanaka Shumba</h1>
     <p>Welcome to my portfolio where I showcase my projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
     <a href="resume.pdf" class="btn" target="_blank">View My Resume</a>
-    <div class="socials">
-      <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
-      <a href="mailto:tanakashumba04@gmail.com">Email</a>
-    </div>
   </header>
 
   <section class="about">
