--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Tanaka Shumba - Cybersecurity professional portfolio showcasing projects, skills, and contact information.">
   <title>Tanaka Shumba | Cybersecurity Portfolio</title>
   <style>
     body {
@@ -86,11 +87,16 @@
       font-size: 0.95rem;
       color: white;
     }
+    .card .tech {
+      font-size: 0.85rem;
+      margin-top: 10px;
+      color: #39ff14;
+    }
     .fade-in {
       opacity: 1 !important;
       transform: translateY(0) !important;
     }
-    .about, .contact {
+    .about, .contact, .skills {
       max-width: 800px;
       margin: 0 auto;
       color: white;
@@ -119,6 +125,11 @@
       height: 100%;
       z-index: 0;
     }
+    @media (max-width: 600px) {
+      header h1 { font-size: 2.2rem; }
+      h2 { font-size: 1.8rem; }
+      header p, .about p, .contact p { font-size: 1rem; }
+    }
   </style>
 </head>
 <body>
@@ -128,17 +139,25 @@
   <header>
     <img src="images/about-me.jpg" alt="Tanaka Shumba Profile" />
     <h1>Tanaka Shumba</h1>
-    <p>Welcome to my portfolio where I showcase my projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
-    <a href="resume.pdf" class="btn" target="_blank">View My Resume</a>
+    <p>Welcome to my portfolio where I showcase projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
+    <a href="resume.pdf" class="btn" target="_blank">View My Resume (opens in new tab)</a>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I am a Cybersecurity professional with a B.S. in Cybersecurity and a strong background in threat detection, incident response, and penetration testing. I enjoy building secure systems, solving real-world problems, and applying technical expertise to keep information safe. My goal is to continuously grow as a security consultant while contributing to innovative projects in the field of IT and security.</p>
+    <p>I am a Cybersecurity professional with a B.S. in Cybersecurity and a strong background in threat detection, incident response, and penetration testing.</p>
+    <p>I enjoy building secure systems, solving real-world problems, and applying technical expertise to keep information safe.</p>
+    <p>My goal is to continuously grow as a security consultant while contributing to innovative projects in IT and security.</p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills & Tech Stack</h2>
+    <p>Python, Bash, Wireshark, Nmap, Metasploit, Splunk, AWS, Linux, Penetration Testing, IDS/IPS, Malware Analysis, Networking</p>
   </section>
 
   <section>
     <h2>Projects</h2>
+    <p style="text-align:center; color:white; margin-bottom:20px;">Here are some of my hands-on cybersecurity and coding projects from GitHub.</p>
     <div class="projects" id="projects"></div>
   </section>
 
@@ -167,7 +186,6 @@
       }
     });
 
-    // Load GitHub Projects
     async function loadProjects() {
       const container = document.getElementById("projects");
       const res = await fetch("https://api.github.com/users/TanakaShumba/repos");
@@ -179,17 +197,20 @@
             repo.name.toLowerCase() !== "tanakashumba"
         )
         .forEach((repo, index) => {
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <h3>${repo.name}</h3>
-            <p>${repo.description || "Cybersecurity and coding project."}</p>
-            <a class="btn" href="${repo.html_url}" target="_blank">View on GitHub</a>
-          `;
-          container.appendChild(card);
-
-          // Delay fade-in animation
-          setTimeout(() => card.classList.add("fade-in"), 200 * index);
+          const languagesRes = fetch(repo.languages_url).then(r => r.json());
+          languagesRes.then(langs => {
+            const langList = Object.keys(langs).join(", ") || "N/A";
+            const card = document.createElement("div");
+            card.className = "card";
+            card.innerHTML = `
+              <h3>${repo.name}</h3>
+              <p>${repo.description || "Cybersecurity and coding project."}</p>
+              <div class="tech">Tech/Tools: ${langList}</div>
+              <a class="btn" href="${repo.html_url}" target="_blank">View on GitHub</a>
+            `;
+            container.appendChild(card);
+            setTimeout(() => card.classList.add("fade-in"), 200 * index);
+          });
         });
     }
     loadProjects();
